Added fetchOldMessages parameter to sockJS.
